# agentsmith-worker

./: .aignore  .gitignore  Cargo.toml  LICENSE  snapcraft.yaml
.ai/: .hints  Dockerfile  agent.yaml  config.json  supervisord.conf
src/: context.rs  error.rs  main.rs
src/cli/: mod.rs  worker_command.rs
src/common/: create_folder.rs
src/config/: config.rs
src/handler/: actuator.rs  job.rs  mod.rs
src/service/: job_service.rs
web/: .env  index.html  package-lock.json  package.json  vite.config.js
web/certs/: _cert.pem
web/src/: App.css  App.jsx  index.css  main.jsx  theme.jsx
web/src/components/BaseComponent/: bloc.js  index.jsx
web/src/components/Buttons/: cancel-with-reason.jsx  critical.jsx  loading.jsx
web/src/components/Dialog/: Confirmation.jsx
web/src/components/DrawerLeft/: bloc.js  index.jsx
web/src/components/DrawerRight/: index.jsx
web/src/components/Notifications/: index.jsx
web/src/components/Page/: index.jsx
web/src/components/Shell/: index.jsx
web/src/components/Typography/: index.jsx
web/src/components/auth/: LogoutButton.jsx  Profile.jsx
web/src/model/: job.js
web/src/pages/: bloc.js  context.jsx  index.jsx
web/src/pages/Dashboard/: bloc.js  index.jsx
web/src/utils/: api.js  logging.js  navigation.jsx  notification.js  retry.js
