[package]
name = "agentsmith-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws", "tracing", "macros", "multipart"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
base64 = "0.22.1"
bytes = "1"
cloudevents-sdk = "0.8.0"
chrono = "0.4"
clap = { version = "4.5", features = [] }
csv = "1.3"
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = "0.4"
mime = "0.3"
redis = {  version = "0.29", features = ["tokio-comp", "json", "connection-manager", "streams"] }
r2d2 = "0.8"
r2d2_redis = "0.14"
serde = "1.0"
serde_json = "1.0"
socketioxide = {  version = "0.12.0" }
tokio = { version = "1.43", features = ["full"] }
tokio-tungstenite = "0.26"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
env_logger={ version = "0.11", features = ["auto-color"] }
uuid = { version = "1", features = ["v4"] }
jsonwebtoken = "9"
tonic = "0.12"
prost = "0.13"
strum_macros = "0.27"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
sqlx = { version = "0.8", features = ["runtime-async-std-native-tls", "mysql", "chrono", "uuid"] }
minijinja = { version = "2", features = ["loader"] }
rustworkx-core= {  version = "0.16" }
regex = "1.11"
rustls = {  version = "0.23", features = ["std", "tls12"] }
ring = {  version = "0.17" }
rustls-pemfile = { version = "2.2" }
rsa = { version = "0.9" }
rcgen = { version = "0.13" }
base64-url = { version = "3" }
pem = "3.0"
rand = "0.9"
rand_core = "0.9"
ignore = { version = "0.4" }

#[build-dependencies]
#cargo-workspaces = "0.3.6"